src/test/deca/context/invalid/ContextAvecObjet/InstanceOf/instanceBoolean.deca
// Description:
//    instance of boolean
//
// Resultats:
//    Erreur contextuelle ligne 12
//    boolean n'est pas une instance de classe
class A{
    Object o = new A();
}
{
    A a = new A();
    boolean x = a.o instanceof boolean;
}
